--- a/examples/framework/web-client/Cargo.toml
+++ b/examples/framework/web-client/Cargo.toml
@@ -8,11 +8,11 @@ license = "Apache-2.0"
 edition = "2018"
 
 [dependencies]
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-derive_more = "0.99"
-log = "0.4"
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
+derive_more = "^0"
+log = "^0"
 
-bios-framework = { path = "../../../framework", default-features = false, features = ["rslog", "web_client"] }
-awc = { version = "2", features = ["rustls"] }
-actix-rt = "1"
+bios-framework = { path = "../../../framework", default-features = false, features = ["rslog", "web-client"] }
+awc = { version = "3.0.0-beta.7", features = ["rustls"] }
+actix-rt = "^2"
