--- a/gateway/apisix/conf/config-default.yaml
+++ b/gateway/apisix/conf/config-default.yaml
@@ -322,7 +322,7 @@ plugins:                          # plugin list (sorted by priority)
   #- skywalking                    # priority: -1100
   - serverless-post-function       # priority: -2000
   - ext-plugin-post-req            # priority: -3000
-  - auth-dew
+  - auth-bios
 
 stream_plugins: # sorted by priority
   - ip-restriction                 # priority: 3000
