--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -22,7 +22,7 @@ lto = true
 codegen-units = 1
 
 [lib]
-name = "bios_framework"
+name = "bios"
 path = "src/lib.rs"
 
 [features]
@@ -60,6 +60,8 @@ url = "^2"
 lazy_static = "^1"
 futures = "^0"
 futures-util = "^0"
+base64 =  "^0"
+uuid = { version = "^0", features = ["serde", "v4"] }
 
 # Web
 actix-web = { version = "4.0.0-beta.8", default-features = false, features = ["compress-gzip", "rustls"], optional = true }
