--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # Gateway
-/gateway/apisix/**
-/gateway/etcd/**
+/gateway/apisix
+/gateway/etcd
 /gateway/default.etcd
 
 !/gateway/apisix/apisix/plugins/auth-bios/**
 !/gateway/apisix/apisix/plugins/auth-bios.lua
-!/gateway/conf/config-default.yaml
-!/gateway/t/plugin/auth-bios/**
-!/gateway/t/certs/**
-!/gateway/t/error_page/**
-!/gateway/t/APISIX.pm
+!/gateway/apisix/conf/config-default.yaml
+!/gateway/apisix/t/plugin/auth-bios
+!/gateway/apisix/t/certs
+!/gateway/apisix/t/error_page
+!/gateway/apisix/t/APISIX.pm
 
 target/
 
