--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -62,6 +62,7 @@ futures = "^0"
 futures-util = "^0"
 base64 = "^0"
 uuid = { version = "^0", features = ["serde", "v4"] }
+strum = { version = "^0", features = ["derive"] }
 
 # Web
 actix-web = { version = "4.0.0-beta.8", default-features = false, features = ["compress-gzip", "rustls"], optional = true }
