--- a/baas/modules/iam/Cargo.toml
+++ b/baas/modules/iam/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1"
 derive_more = "^0"
 log = "^0"
 chrono = { version = "^0", features = ["serde"] }
+strum = { version = "^0", features = ["derive"] }
 
 bios-framework = { path = "../../../framework", features = ["web-client", "openapi", "reldb", "cache", "test"] }
 actix-web = { version = "4.0.0-beta.8", default-features = false, features = ["compress-gzip", "rustls"] }
