--- a/baas/modules/iam/Cargo.toml
+++ b/baas/modules/iam/Cargo.toml
@@ -28,6 +28,7 @@ strum = { version = "^0", features = ["derive"] }
 itertools = "^0"
 regex = "^1"
 lazy_static = "^1"
+async-trait = "^0"
 
 bios-framework = { path = "../../../framework", features = ["web-client", "openapi", "reldb", "cache", "test"] }
 actix-web = { version = "4.0.0-beta.9", default-features = false, features = ["compress-gzip", "rustls"] }
