--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -64,6 +64,7 @@ base64 = "^0"
 uuid = { version = "^0", features = ["serde", "v4"] }
 strum = { version = "^0", features = ["derive"] }
 rust-crypto = "^0"
+async-trait = "^0"
 
 # Web
 actix-web = { version = "4.0.0-beta.9", default-features = false, features = ["compress-gzip", "rustls"], optional = true }
@@ -81,8 +82,8 @@ serde_urlencoded = { version = "^0", optional = true }
 paperclip = { version = "^0", features = ["actix"], optional = true }
 
 # RelDB
-sea-query = { version = "^0", default-features = false, features = ["derive", "backend-mysql", "sqlx-mysql", "with-chrono", "with-rust_decimal"], optional = true }
-sqlx = { version = "^0", default-features = false, features = ["macros", "mysql", "chrono", "decimal", "runtime-tokio-native-tls"], optional = true }
+sea-query = { version = "^0", default-features = false, features = ["derive", "backend-mysql", "backend-postgres", "sqlx-mysql", "sqlx-postgres", "with-chrono", "with-rust_decimal"], optional = true }
+sqlx = { version = "^0", default-features = false, features = ["macros", "mysql", "postgres", "chrono", "decimal", "runtime-tokio-native-tls"], optional = true }
 
 # Redis
 redis = { version = "^0", features = ["tokio-comp"], optional = true }
