--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -67,12 +67,12 @@ rust-crypto = "^0"
 async-trait = "^0"
 
 # Web
-actix-web = { version = "4.0.0-beta.10", default-features = false, features = ["compress-gzip", "rustls"], optional = true }
-actix-http = { version = "3.0.0-beta.11", optional = true }
+actix-web = { version = "4.0.0-beta.19", default-features = false, features = ["compress-gzip", "rustls"], optional = true }
+actix-http = { version = "3.0.0-beta.18", optional = true }
 actix-service = { version = "^2", optional = true }
-actix-cors = { version = "0.6.0-beta.3", optional = true }
-actix-router = { version = "0.5.0-beta.2", optional = true }
-awc = { version = "3.0.0-beta.9", features = ["rustls"], optional = true }
+actix-cors = { version = "0.6.0-beta.8", optional = true }
+actix-router = { version = "0.5.0-beta.4", optional = true }
+awc = { version = "3.0.0-beta.18", features = ["rustls"], optional = true }
 validator = { version = "^0", features = ["derive"], optional = true }
 mime = { version = "^0", optional = true }
 serde_qs = { version = "^0", features = ["actix"], optional = true }
@@ -100,6 +100,7 @@ testcontainers = { version = "^0", optional = true }
 # Common
 tokio = { version = "^1", features = ["time", "rt", "macros"] }
 actix-rt = "^2"
+http = "0.2.5"
 
 [[test]]
 name = "test_web_server"
@@ -120,9 +121,3 @@ required-features = ["test", "mq"]
 [[test]]
 name = "test_reldb_client"
 required-features = ["test", "reldb"]
-
-
-
-
-
-
