Start to refactor the framework project, try to introduce sea-orm and poem.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,5 @@
 [workspace]
 
 members = [
-    "framework",
-    "baas/modules/*",
-    "baas/services/*",
-    "examples/*/*",
+    "modules/basic/framework",
 ]
