--- a/modules/basic/framework/Cargo.toml
+++ b/modules/basic/framework/Cargo.toml
@@ -30,8 +30,8 @@ default = ["rslog"]
 trace = ["tracing", "tracing-subscriber"]
 rslog = ["log4rs", "trace"]
 future = ["tokio", "futures", "async-stream", "futures-util", "async-trait"]
-reldb = ["future", "tracing-subscriber", "rslog","sqlparser","sea-orm"]
-web-server = ["future", "poem", "rslog"]
+reldb = ["future", "rslog", "sqlparser", "sea-orm"]
+web-server = ["future", "rslog", "poem", "poem-openapi"]
 cache = ["redis"]
 mq = ["futures-util", "lapin", "amq-protocol-types", "async-global-executor"]
 test = ["testcontainers"]
@@ -70,7 +70,8 @@ sea-orm = { version = "0.5.0", features = ["sqlx-mysql", "macros", "runtime-toki
 sqlparser = { version = "0.13.0", optional = true }
 
 # Web
-poem = { version = "1.2.33", features = ["static-files"], optional = true }
+poem-openapi = { version = "1.2.39", features = ["rapidoc"], optional = true }
+poem = { version = "1.2.39", features = ["csrf", "opentelemetry", "native-tls", "prometheus", "websocket"], optional = true }
 
 # Redis
 redis = { version = "^0", features = ["tokio-comp"], optional = true }
@@ -86,6 +87,14 @@ testcontainers = { version = "^0", optional = true }
 [dev-dependencies]
 # Common
 tokio = { version = "^1", features = ["time", "rt", "macros"] }
+
+[[test]]
+name = "test_web_server"
+required-features = ["test", "web-server"]
+
+[[test]]
+name = "test_web_server_demo"
+required-features = ["test", "web-server"]
 
 [[test]]
 name = "test_reldb_client"
