--- a/modules/basic/framework/Cargo.toml
+++ b/modules/basic/framework/Cargo.toml
@@ -31,6 +31,7 @@ trace = ["tracing", "tracing-subscriber"]
 future = ["tokio", "futures", "async-stream", "futures-util", "async-trait"]
 reldb = ["future", "sqlparser", "sea-orm"]
 web-server = ["future", "poem", "poem-openapi"]
+web-client = ["tokio","reqwest"]
 cache = ["redis"]
 mq = ["futures-util", "lapin", "amq-protocol-types", "async-global-executor"]
 test = ["testcontainers"]
@@ -65,9 +66,12 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = tr
 sea-orm = { version = "0.5.0", features = ["sqlx-mysql", "macros", "runtime-tokio-native-tls", "debug-print"], optional = true }
 sqlparser = { version = "0.13.0", optional = true }
 
-# Web
+# Web Server
 poem-openapi = { version = "1.2.39", features = ["rapidoc"], optional = true }
 poem = { version = "1.2.39", features = ["csrf", "opentelemetry", "native-tls", "prometheus", "websocket"], optional = true }
+
+# Web Client
+reqwest = { version = "0.11.9", features = ["json"], optional = true }
 
 # Redis
 redis = { version = "^0", features = ["tokio-comp"], optional = true }
@@ -86,7 +90,11 @@ tokio = { version = "^1", features = ["time", "rt", "macros"] }
 
 [[test]]
 name = "test_web_server"
-required-features = ["test", "web-server"]
+required-features = ["test", "web-server", "web-client"]
+
+[[test]]
+name = "test_web_client"
+required-features = ["test", "web-client"]
 
 [[test]]
 name = "test_reldb_client"
