--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,7 @@
 
 members = [
     "framework",
+    "framework/examples/reldb",
     "framework/examples/web-basic",
+    "framework/examples/web-client",
 ]
