--- a/framework/examples/web-client/Cargo.toml
+++ b/framework/examples/web-client/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "bios-framework-example-web-client"
 version = "0.1.0"
-edition = "2018"
+authors = ["gudaoxuri"]
+edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
+serde = { version = "^1", features = ["derive"] }
+serde_json = { version = "^1" }
+tokio = { version = "1.15.0", features = ["macros"] }
+bios-framework = { path = "../..", features = ["web-client"] }
+
